# reap-cuda

./: .gitignore  README.md  pyproject.toml  run-findings-2.md  run-findings-3.md  run-findings-4.md  run-findings-5.md  run-findings.md
.github/workflows/: ci.yml  gpu.yml
data/: smoke_50.jsonl
docs/: architecture.md  calibration.md  cli.md  development.md  evaluation.md  frea-throughput.md  gpu-and-backends.md  index.md  layerwise.md  merging.md  model-adapters.md  observation-and-metrics.md  pipeline.md  pruning.md  residency.md  security.md  setup.md
docs/kernels/: 00-cost-model.md  01-f3-dead-metric-audit.md  02-bmm-baseline.md  03-f5-router-fusion.md  04-frea-kernel.md  05-f2-saliency-accumulator.md  06-f4-weight-stacking.md  07-validation-strategy.md  08-expected-improvements.md  README.md
experiments/: pruning-cli.sh  pruning-layerwise-cli.sh
reports/: architecture-analysis.md  benchmark-results.md  compression-metrics.md  published-artifacts.md  quantization-details.md  run-findings-6.md  run-findings.md
scripts/: build.sh  diag_lfm2_mem.py  reap_lfm2_run.py  repl.py  smoke_qwen35.py
src/reap/: args.py  data.py  eval.py  layerwise_merge.py  layerwise_model_utils.py  layerwise_observer.py  layerwise_prune.py  main.py  merge.py  merge_pipeline.py  metrics.py  model_adapters.py  model_util.py  observer.py  permute.py  pipeline.py  prune.py  pruning_metrics.py  residency.py
src/reap/cli/: __init__.py  __main__.py  app.py  merge_cmd.py  options.py  prune_cmd.py
src/reap/kernels/: __init__.py  backend.py  bmm.py  f2.py  frea.py  observe.py  router.py  triton_frea.py  triton_reduce.py  triton_softmax.py  triton_utils.py  weight_cache.py
src/reap/models/: modeling_deepseek.py  modeling_ernie4_5_moe.py  tokenization_ernie4_5.py
src/reap/models/glm/: config.json  modeling_glm4_moe.py
tests/: conftest.py  test_arg_parsing.py  test_cli.py  test_cluster_args.py  test_composite_dataset_loading.py  test_dataset_loading.py  test_eval.py  test_f4_weight_cache.py  test_fused_slice_forward.py  test_kernel_parity_bmm.py  test_layerwise_e2e.py  test_layerwise_model_utils.py  test_layerwise_observer.py  test_merge_pipeline.py  test_metrics.py  test_model_adapters.py  test_observer_artifacts.py  test_permute.py  test_prune_safety.py  test_pruning_e2e.py  test_pruning_metrics.py  test_pruning_metrics_only_contract.py  test_residency.py  test_run_findings_fixes.py  test_security_and_args.py  test_skip_first_last.py  test_triton_kernels.py
