[project]
name = "reap"
version = "0.1.0"
description = "REAP: Router-weighted Expert Activation Pruning for MoE compression on CUDA."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0, <4.0.0",
    "torch==2.7.1",
    "transformers==4.55.0",
    "tqdm",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["SIM"]
