[project]
name = "reap"
version = "0.1.0"
description = "REAP: Router-weighted Expert Activation Pruning for MoE compression on CUDA."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0, <4.0.0",
    "torch>=2.10.0,<2.15",
    "transformers>=5.5.0,<6",
    "tqdm",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
eval = ["lm-eval>=0.4.5"]
cuda = ["triton>=2.3"]

[dependency-groups]
dev = [
    "coverage[toml]>=7.8",
    "pytest>=8.3",
    "ruff>=0.11",
]

[project.scripts]
reap = "reap.cli.app:main"
# Legacy console scripts (HfArgumentParser); prefer `reap …` Typer CLI.
reap-prune = "reap.prune:main"
reap-layerwise = "reap.layerwise_prune:main"
reap-merge = "reap.merge_pipeline:main"
reap-layerwise-merge = "reap.layerwise_merge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.pytest.ini_options]
markers = [
    "cuda: requires a CUDA-capable host and optional Triton installation",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM105"]
"src/reap/permute.py" = ["SIM108"]
"src/reap/merge.py" = ["SIM108"]
"src/reap/layerwise_observer.py" = ["SIM108"]
"src/reap/kernels/observe.py" = ["SIM108"]
"src/reap/kernels/triton_utils.py" = ["SIM108"]
